--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Demo OTP - F1BT</title>
+    <title>Demo OTP - CNSM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
